<?xml version="1.0" encoding="UTF-8"?>

<!-- Copyright 2014 Sheldon Neilson www.neilson.co.za Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License. -->

    <resources>

    <!-- Application -->


    <color name="holo_blue_light">#ff33b5e5</color>

    <!-- Math Alarm Activity -->


    <string name="app_name">Alarm Clock</string>

    <string name="title_activity_set_alarms">Set Alarm</string>

    <string name="no_alarms">No alarms have been set</string>

    <string name="button_new">New</string>

    <!-- Menu -->


    <string name="menu_item_new">New</string>

    <string name="menu_item_save">Save</string>

    <string name="menu_item_delete">Cancel</string>

    <string name="menu_item_rate">Rate on Google Play</string>

    <string name="menu_item_website">Website</string>

    <string name="menu_item_report">Report a Bug</string>

    <!-- Alert -->


    <string name="_0">0</string>

    <string name="_1">1</string>

    <string name="_2">2</string>

    <string name="_3">3</string>

    <string name="_4">4</string>

    <string name="_5">5</string>

    <string name="_6">6</string>

    <string name="_7">7</string>

    <string name="_8">8</string>

    <string name="_9">9</string>

    <string name="decimal_button_text">,</string>

    <string name="clear_button_text">Clear</string>

    <string name="minus_button_text">-</string>

    <color name="title_background_color">#000000</color>

    <string name="button_delete">Delete</string>

    <string name="ok">OK</string>

    <string name="cancel">Cancel</string>

</resources>